# tradera-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
tests/: test_api.py  test_cli.py  test_cli_entry.py  test_formatters.py  test_import.py  test_main_module.py
tradera_cli/: api.py  cli.py  formatters.py
